[gd_scene load_steps=10 format=3 uid="uid://cy2kj4ci6aavf"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_guc8t"]
[ext_resource type="PackedScene" uid="uid://475iyu2tyo4q" path="res://scenes/mob.tscn" id="2_a1ma1"]
[ext_resource type="PackedScene" uid="uid://cc47fsd1unnle" path="res://scenes/player.tscn" id="3_h4vpg"]
[ext_resource type="PackedScene" uid="uid://thevvnqycdxh" path="res://scenes/fruit.tscn" id="3_r4fyg"]
[ext_resource type="PackedScene" uid="uid://cplrcpm5bj11n" path="res://scenes/hud.tscn" id="4_jxub6"]
[ext_resource type="AudioStream" uid="uid://c4uwc3d8wnnjf" path="res://art/House In a Forest Loop.ogg" id="5_rrncv"]
[ext_resource type="AudioStream" uid="uid://bevyq7cynb0s" path="res://art/gameover.wav" id="6_tr37a"]

[sub_resource type="Curve2D" id="Curve2D_ipfwm"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="Curve2D" id="Curve2D_2u5dm"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 64, 64, 0, 0, 0, 0, 64, 640, 0, 0, 0, 0, 128, 640, 0, 0, 0, 0, 128, 64, 0, 0, 0, 0, 192, 64, 0, 0, 0, 0, 192, 640, 0, 0, 0, 0, 256, 640, 0, 0, 0, 0, 256, 64, 0, 0, 0, 0, 320, 64, 0, 0, 0, 0, 320, 640, 0, 0, 0, 0, 384, 640, 0, 0, 0, 0, 384, 64, 0, 0, 0, 0, 64, 64)
}
point_count = 13

[node name="Main" type="Node"]
script = ExtResource("1_guc8t")
mob_scene = ExtResource("2_a1ma1")
fruit_scene = ExtResource("3_r4fyg")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.406178, 0.591439, 0.606349, 1)

[node name="Player" parent="." instance=ExtResource("3_h4vpg")]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="FruitTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="PlayerStartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_ipfwm")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="HUD" parent="." instance=ExtResource("4_jxub6")]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_rrncv")
parameters/looping = true

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_tr37a")

[node name="FruitPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_2u5dm")

[node name="FruitSpawnLocation" type="PathFollow2D" parent="FruitPath"]
position = Vector2(64, 64)
rotation = 1.5708

[connection signal="fruit_hit" from="Player" to="." method="_on_player_fruit_hit"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="FruitTimer" to="." method="_on_fruit_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
